--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,9 +2,12 @@
 <html lang="fr">
 
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Groupomania</title>
+    <meta charset="utf-8"/>
+    <link rel="icon" href="./favicon-groupomania.png"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="description" content="Résau social interne de Groupomania"/>
+
+    <title>Groupomania</title>
 </head>
 
 <body>
